# TxGNN

./: Makefile  README.md  TxGNN_Demo.ipynb  pyproject.toml
reproduce/: gather result-txgnn.ipynb  smoke_test.py  train.py
txgnn/: TxData.py  TxEval.py  TxGNN.py  __init__.py  model.py  utils.py  version.py
txgnn/data_splits/: datasplit.py  do_obo_parser.py
txgnn/graphmask/: abstract_torch_module.py  hard_concrete.py  lagrangian_optimization.py  moving_average.py  multiple_inputs_layernorm_linear.py  sigmoid_penalty.py
