[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TxGNN"
dynamic = ["version", "readme"]
description = "TxGNN"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "TxGNN Team", email = "kexinh@stanford.edu"}]
urls = {Homepage = "https://github.com/mims-harvard/TxGNN"}
dependencies = [
  "numpy",
  "pandas",
  "tqdm",
  "matplotlib",
  "scikit-learn",
  "goatools",
  "requests",
  "scipy",
  "torch",
]

[tool.setuptools.dynamic]
version = {attr = "txgnn.version.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
exclude = ["test"]

[tool.setuptools]
include-package-data = true
